Another small alignment fix

--- a/static/css/site.css
+++ b/static/css/site.css
@@ -232,8 +232,8 @@ img {
     position: relative;
     width: 21px;
     height: 21px;
-    display: inline-block;
     text-align: center;
+    float: left;
 }
 
 .tooltip-area-card {
